--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "ext-mysqli": "*"
+        "ext-mysqli": "*",
+        "mpdf/mpdf": "^8.2"
     }
 }
